--- a/07-Pig-Game/style.css
+++ b/07-Pig-Game/style.css
@@ -157,6 +157,10 @@ main {
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
 }
 
+.dice--hidden {
+  visibility: hidden;
+}
+
 .player--winner {
   background-color: #2f2f2f;
 }
