--- a/13-Advanced-DOM-Bankist/style.css
+++ b/13-Advanced-DOM-Bankist/style.css
@@ -666,9 +666,10 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  width: 100%;
+  width: 104%;
   background-color: white;
   color: #bbb;
   font-size: 1.5rem;
   font-weight: 400;
+  padding: 1rem;
 }
