--- a/16-Asynchronous/style.css
+++ b/16-Asynchronous/style.css
@@ -102,9 +102,10 @@ body {
   border: none;
   font-size: 2rem;
   padding: 2rem 5rem;
+  margin-top: 5rem;
   border-radius: 0.7rem;
   color: white;
-  background-color: orangered;
+  background-color: royalblue;
   cursor: pointer;
 }
 
